# Spotter

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  colony.json  env.example  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/icons/: icon.icns
docs/: API_INTEGRATIONS.md  ARCHITECTURE.md  CONFIGURATION.md  DATA_MODEL.md  DEVELOPMENT.md
src/: api_client.rs  app.rs  db.rs  error.rs  images.rs  keyring.rs  lib.rs  main.rs  models.rs  theme.rs
src/epic/: api.rs  auth.rs  filters.rs  formatting.rs  graphql.rs  local.rs  mod.rs  online.rs  types.rs
src/gog/: auth.rs  mod.rs
src/handlers/: auth.rs  data.rs  import.rs  mod.rs  settings.rs
src/messages/: auth.rs  mod.rs  settings.rs
src/playstation/: mod.rs
src/steam/: auth.rs  mod.rs
src/views/: add_game.rs  detail.rs  helpers.rs  import.rs  library.rs  mod.rs  profile.rs  settings.rs  sidebar.rs  stats.rs
src/xbox/: mod.rs
tests/: integration_tests.rs  unit_tests.rs
