[package]
name = "spotter"
version = "0.1.1"
edition = "2021"
description = "A cross-platform game library tracker and statistics dashboard"
license = "MIT"

[dependencies]
iced = { version = "0.14", features = ["image"] }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
csv = "1"
scraper = "0.22"
keyring = "3"

[profile.release]
lto = "thin"
strip = "symbols"
opt-level = 3
